@@ -35,6 +35,7 @@ import org.keycloak.sdjwt.vp.SdJwtVP;
 
 import java.time.Instant;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.CoreMatchers.containsString;
@@ -72,9 +73,10 @@ public abstract class SdJwtVPVerificationTest {
 
     @Test
     public void testVerif_s20_8_sdjwt_with_kb__AltCnfCurves() throws VerificationException {
-        List<String> entries = Arrays.asList(new String[]{
-            "sdjwt/s20.8-sdjwt+kb--es384.txt", "sdjwt/s20.8-sdjwt+kb--es512.txt"
-        });
+        List<String> entries = Arrays.asList(
+                "sdjwt/s20.8-sdjwt+kb--es384.txt",
+                "sdjwt/s20.8-sdjwt+kb--es512.txt"
+        );
 
         for (String entry : entries) {
             String sdJwtVPString = TestUtils.readFileAsString(getClass(), entry);
@@ -90,12 +92,12 @@ public abstract class SdJwtVPVerificationTest {
 
     @Test
     public void testVerif_s20_8_sdjwt_with_kb__CnfRSA() throws VerificationException {
-        List<String> entries = Arrays.asList(new String[]{
+        List<String> entries = Arrays.asList(
                 "sdjwt/s20.8-sdjwt+kb--cnf-rsa-rs256.txt",
                 "sdjwt/s20.8-sdjwt+kb--cnf-rsa-ps256.txt",
                 "sdjwt/s20.8-sdjwt+kb--cnf-rsa-ps384.txt",
                 "sdjwt/s20.8-sdjwt+kb--cnf-rsa-ps512.txt"
-        });
+        );
 
         for (String entry : entries) {
             String sdJwtVPString = TestUtils.readFileAsString(getClass(), entry);
@@ -425,7 +427,7 @@ public abstract class SdJwtVPVerificationTest {
     }
 
     private List<SignatureVerifierContext> defaultIssuerVerifyingKeys() {
-        return List.of(testSettings.issuerVerifierContext);
+        return Collections.singletonList(testSettings.issuerVerifierContext);
     }
 
     private IssuerSignedJwtVerificationOpts.Builder defaultIssuerSignedJwtVerificationOpts() {
